<resources>
    <string name="app_name">WGUC196</string>
    <string name="sample_data">Sample Data</string>
    <string name="clear_all_data">Clear All Data</string>
    <string name="progress_tracking">Progress Tracking</string>
    <string name="view_terms">View Terms</string>
    <string name="course_progress">Course Progress</string>
    <string name="completed">Completed: </string>
    <string name="assessment_progress">Assessment Progress</string>
    <string name="hamburger">Hamburger</string>
    <string name="settings">Settings</string>
    <string name="edit_term_title">Edit Term Title</string>
</resources>